[package]
name = "rtiow"
version = "0.1.0"
authors = ["Markus Klein <markus-klein@live.de>"]
edition = "2018"

[dependencies]
# Random number generation
rand = "0.7.3"
# Command line argument parsing
structopt = "0.3.14"
# Output to image format
image = "0.23.5"
# Progress bar
indicatif = "0.14.0"
# Parallization
rayon = "1.3.0"
# Customizing behaviour on Ctrl + C
ctrlc = "3.1.4"
# Serialization / Deserialization (for Scene Description)
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 16
